CRUD meets commits
